# PTBRi

./: .gitignore  Cargo.toml  README.md  index.html  project_status.org  ptbr_definitions.md
.github/workflows/: release.yml  rust.yml
benches/: benchmarks.rs
src/: ast.rs  error.rs  eval.rs  interpreter.rs  lib.rs  main.rs  parser.rs  ptbr.pest  tokenizer.rs  types.rs
src/tests/: .rustc_info.json  if_statement.ptbr  mod.rs  tests.rs
styles/: index.css
tests/: ackermann.ptbr  and_or.ptbr  basic.ptbr  boolean.ptbr  calculator.ptbr  comments.ptbr  entrada.ptbr  fac.lol  fibonacci.ptbr  fibonacci_iterative.ptbr  function-ordering.lol  function.ptbr  function_recursion.ptbr  function_return.ptbr  hanoi_towers_recursion.ptbr  implicit-return.lol  int-overflow.lol  math.ptbr  nan.lol  nested_function.ptbr  pow.lol  senao.ptbr  test.ptbr  test2.ptbr  tests.rs  variable_definition.ptbr  while_statement.ptbr
tests/errors/: illegal_operation.ptbr  incomplete_expression.ptbr  infinite_recursion.ptbr  not_enough_args.ptbr  pest_parse_error.ptbr  undefined_function.ptbr  undefined_var.ptbr
tests/fail/: divide-by-zero.lol  stack-overflow.lol
